@@ -2,7 +2,7 @@ package com.szampchat.server.channel;
 
 import com.szampchat.server.channel.dto.ChannelCreateDTO;
 import com.szampchat.server.channel.dto.ChannelDTO;
-import com.szampchat.server.channel.dto.ChannelRolesDTO;
+import com.szampchat.server.channel.dto.ChannelFullInfoDTO;
 import com.szampchat.server.channel.entity.Channel;
 import com.szampchat.server.channel.event.ChannelCreateEvent;
 import com.szampchat.server.channel.event.ChannelDeleteEvent;
@@ -14,6 +14,8 @@ import com.szampchat.server.event.EventSink;
 import com.szampchat.server.event.data.Recipient;
 import com.szampchat.server.role.dto.ChannelRoleOverwriteDTO;
 import com.szampchat.server.role.dto.ChannelRoleOverwritesDTO;
+import com.szampchat.server.voice.service.ParticipantService;
+import com.szampchat.server.voice.dto.RoomParticipantsDTO;
 import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
 import com.szampchat.server.role.service.ChannelRoleService;
@@ -23,13 +25,15 @@ import reactor.core.publisher.Mono;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
+import java.util.Set;
 
 @Service("channelService")
 @AllArgsConstructor
 public class ChannelService {
     private final ChannelRepository channelRepository;
     private final CommunityMemberService communityMemberService;
+    private final ParticipantService participantService;
     private ChannelRoleService channelRoleService;
 
     private final ModelMapper modelMapper;
@@ -43,9 +47,16 @@ public class ChannelService {
                 .flatMap(channel -> communityMemberService.isMember(channel.getCommunityId(), userId));
     }
 
+    @Deprecated
     public Mono<Channel> getChannel(Long channelId) {
         return channelRepository.findById(channelId)
                 .switchIfEmpty(Mono.error(new ChannelNotFoundException()));
+    }
+
+    public Mono<ChannelDTO> getChannelDTO(Long channelId) {
+        return channelRepository.findById(channelId)
+                .switchIfEmpty(Mono.error(new ChannelNotFoundException()))
+                .map(this::toDTO);
     }
 
 
@@ -54,21 +65,37 @@ public class ChannelService {
                 .map(this::toDTO);
     }
 
-    public Flux<ChannelRolesDTO> getCommunityChannelsWithRoles(Long communityId) {
+    public Flux<ChannelFullInfoDTO> getCommunityChannelsFullInfo(Long communityId) {
         return getCommunityChannels(communityId)
                 .collectList()
                 .flatMapMany(channelDTOs -> {
-                    List<Long> channelIds = channelDTOs.stream().map(ChannelDTO::getId).collect(Collectors.toList());
+                    List<Long> channelIds = channelDTOs.stream()
+                            .map(ChannelDTO::getId)
+                            .toList();
 
-                    return channelRoleService.getChannelOverwritesBulk(channelIds)
-                            .collectMap(ChannelRoleOverwritesDTO::getChannelId, ChannelRoleOverwritesDTO::getOverwrites)
-                            .flatMapMany(overwritesMap ->
-                                    Flux.fromIterable(channelDTOs)
+                    List<Long> voiceChannelIds = channelDTOs.stream()
+                            .filter(channelDTO -> channelDTO.getType() == ChannelType.VOICE_CHANNEL)
+                            .map(ChannelDTO::getId)
+                            .toList();
+
+                    Mono<Map<Long, List<ChannelRoleOverwriteDTO>>> overwritesMapMono = channelRoleService.getChannelOverwritesBulk(channelIds)
+                            .collectMap(ChannelRoleOverwritesDTO::getChannelId, ChannelRoleOverwritesDTO::getOverwrites);
+
+                    Mono<Map<Long, Set<Long>>> participantsMono = participantService.getRoomParticipants(voiceChannelIds)
+                            .collectMap(RoomParticipantsDTO::getChannelId, RoomParticipantsDTO::getParticipants);
+
+                    return Mono.zip(overwritesMapMono, participantsMono)
+                            .flatMapMany(tuple2 -> {
+                                Map<Long, List<ChannelRoleOverwriteDTO>> overwritesMap = tuple2.getT1();
+                                Map<Long, Set<Long>> participantsMap = tuple2.getT2();
+
+                                return Flux.fromIterable(channelDTOs)
                                         .map(channelDTO -> {
                                             List<ChannelRoleOverwriteDTO> overwrites = overwritesMap.getOrDefault(channelDTO.getId(), Collections.emptyList());
-                                            return new ChannelRolesDTO(channelDTO, overwrites);
-                                        })
-                            );
+                                            Set<Long> participants = participantsMap.get(channelDTO.getId());
+                                            return new ChannelFullInfoDTO(channelDTO, overwrites, participants);
+                                        });
+                            });
                 });
     }
 
